CHANGES IN VERSION 1.5.4
------------------------
 o bug fixed in scaleClade, now y positions are (hopefully) always correct. <2016-05-20, Fri>
 o bug fixed in collapse <2016-05-20, Fri>
   + if user collapse a node that is an offspring of a collapsed node, print warning msg and return the tree directly
 o use byte compiler <2016-05-18, Wed>
 o change any(is.na()) to anyNA() which is more efficient <2016-05-18, Wed> 
 o https://github.com/Bioconductor-mirror/ggtree/commit/559548c66b51253e8ccb983d353385838a81f106

CHANGES IN VERSION 1.5.3
------------------------
 o add examples in vignettes <2016-05-13, Fri>
   + add fan layout example in treeVisualization vignette
   + add open_tree and rotate_tree example in treeManipulation vignette
 o add angle in ggtree function, fan layout supported <2016-05-12, Thu>
 o rotate_tree and open_tree function <2016-05-12, Thu> 
 o support reading BEAST MCC trees (multiple trees in one file) via the read.beast function <2016-05-12, Thu>
 o https://github.com/Bioconductor-mirror/ggtree/commit/51eec4721595c274c24dc4df2f1fdf40700cb1a5 

CHANGES IN VERSION 1.5.2
------------------------
 o add multiplot in ggtreeUtilities vignette <2016-05-12, Thu>
 o add example of integrate user's data using phylo4d in treeAnnotation vignette <2016-05-11, Wed>
 o add extend, extendto parameter in geom_hilight <2016-05-10, Tue>
 o geom_hilight now supports hilight tips <2016-05-10, Tue>
   + https://github.com/GuangchuangYu/ggtree/issues/53
 o more accurate ylim & angle for circular layout <2016-05-10, Tue>
   + https://github.com/GuangchuangYu/ggtree/issues/40
 o supports phylo4d object <2016-05-10, Tue>
   + https://github.com/GuangchuangYu/ggtree/issues/47
 
CHANGES IN VERSION 1.5.1
------------------------
 o update vignettes <2016-05-10, Tue>
   + add geom_range example in treeImport
   + add geom_strip and geom_taxalink example in treeAnnotation
   + add ggtreeUtilities vignette