@@ -1,42 +1,0 @@
-##' reroot a tree
-##'
-##' 
-##' @rdname reroot-methods
-##' @exportMethod reroot
-setMethod("reroot", signature(object="phylo"),
-          function(object, node, ...) {
-              pos <- 0.5* object$edge.length[which(object$edge[,2] == node)]
-
-              ## @importFrom phytools reroot
-              phytools <- "phytools"
-              require(phytools, character.only = TRUE)
-              
-              phytools_reroot <- eval(parse(text="phytools::reroot"))
-
-              tree <- phytools_reroot(object, node, pos)
-              attr(tree, "reroot") <- TRUE
-              node_map <- reroot_node_mapping(object, tree)
-              attr(tree, "node_map") <- node_map
-              return(tree)
-          })
-
-
-
-##' @rdname get.tree-methods
-##' @exportMethod get.tree
-setMethod("get.tree", signature(object="phylo"),
-          function(object, ...) {
-              return(object)
-          })
-
-##' @rdname scale_color-methods
-##' @exportMethod scale_color
-setMethod("scale_color", signature(object="phylo"),
-          function(object, by, ...) {
-              scale_color_(object, by, ...)
-          })
-
-
-
-
-
