@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/codeml_mlc.R, R/hyphy.R, R/method-get-tree.R, R/paml_rst.R, R/phangorn.R, R/phylo.R, R/r8s.R
+% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/codeml_mlc.R, R/hyphy.R, R/method-get-tree.R, R/paml_rst.R, R/phangorn.R, R/r8s.R
 \docType{methods}
 \name{get.tree}
 \alias{get.tree}
@@ -38,11 +38,11 @@ get.tree(object, ...)
 
 \S4method{get.tree}{phylip}(object, ...)
 
+\S4method{get.tree}{phylo}(object, ...)
+
 \S4method{get.tree}{paml_rst}(object)
 
 \S4method{get.tree}{phangorn}(object, ...)
-
-\S4method{get.tree}{phylo}(object, ...)
 
 \S4method{get.tree}{r8s}(object, ...)
 }
