@@ -1,15 +1,18 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/beast.R, R/phylo.R
+% Please edit documentation in R/AllGenerics.R, R/method-reroot.R
 \docType{methods}
 \name{reroot}
 \alias{reroot}
 \alias{reroot,beast-method}
 \alias{reroot,phylo-method}
+\alias{reroot,raxml-method}
 \title{reroot method}
 \usage{
 reroot(object, node, ...)
 
 \S4method{reroot}{beast}(object, node, ...)
+
+\S4method{reroot}{raxml}(object, node, ...)
 
 \S4method{reroot}{phylo}(object, node, ...)
 }
