@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/ape.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/method-scale-color.R, R/phangorn.R, R/phylo.R, R/r8s.R
+% Please edit documentation in R/AllGenerics.R, R/RAxML.R, R/ape.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/method-scale-color.R, R/phangorn.R, R/r8s.R
 \docType{methods}
 \name{scale_color}
 \alias{scale_color}
@@ -37,9 +37,9 @@ scale_color(object, by, ...)
 
 \S4method{scale_color}{paml_rst}(object, by, ...)
 
-\S4method{scale_color}{phangorn}(object, by, ...)
-
 \S4method{scale_color}{phylo}(object, by, ...)
+
+\S4method{scale_color}{phangorn}(object, by, ...)
 
 \S4method{scale_color}{r8s}(object, by = "bootstrap", tree = "TREE")
 }
